// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCategories: Component should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": Object {
            "defaultMessage": "Project",
            "id": "shared.components.projectBreadcrumbs.project",
          },
        },
        Object {
          "h3": Object {
            "defaultMessage": "Templates",
            "id": "shared.components.projectBreadcrumbs.templates",
          },
          "path": "/project/1/templates",
          "span": Object {
            "defaultMessage": "Tab",
            "id": "shared.components.projectBreadcrumbs.tab",
          },
        },
        Object {
          "active": true,
          "h3": Object {
            "defaultMessage": "Tags Template",
            "id": "shared.components.projectBreadcrumbs.tagsTemplate",
          },
          "path": "/project/1/tags-templates",
          "span": Object {
            "defaultMessage": "Library",
            "id": "shared.components.projectBreadcrumbs.libraryMessage",
          },
        },
      ]
    }
  />
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    headerTitle={
      <Memo(FormattedMessage)
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    title={
      <Memo(FormattedMessage)
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
  >
    <PlusLink
      id="addTagCategoryBtn"
      size={60}
      to="/project/1/tag-templates/create"
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <Memo(FormattedMessage)
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="0"
      >
        <Styled(Link)
          id="tag-category-colors"
          to="/tag-category/1"
        >
          Colors
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <Memo(FormattedMessage)
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="1"
      >
        <Styled(Link)
          id="tag-category-countries"
          to="/tag-category/2"
        >
          Countries
        </Styled(Link)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackLink
        id="backBtn"
        to="/project/1/templates"
      />
      <PlusLink
        hideOnDesktop={true}
        size={60}
        to="/project/1/tag-templates/create"
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;

exports[`TagCategories: Component should render correctly when no categories 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": Object {
            "defaultMessage": "Project",
            "id": "shared.components.projectBreadcrumbs.project",
          },
        },
        Object {
          "h3": Object {
            "defaultMessage": "Templates",
            "id": "shared.components.projectBreadcrumbs.templates",
          },
          "path": "/project/1/templates",
          "span": Object {
            "defaultMessage": "Tab",
            "id": "shared.components.projectBreadcrumbs.tab",
          },
        },
        Object {
          "active": true,
          "h3": Object {
            "defaultMessage": "Tags Template",
            "id": "shared.components.projectBreadcrumbs.tagsTemplate",
          },
          "path": "/project/1/tags-templates",
          "span": Object {
            "defaultMessage": "Library",
            "id": "shared.components.projectBreadcrumbs.libraryMessage",
          },
        },
      ]
    }
  />
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    headerTitle={
      <Memo(FormattedMessage)
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    title={
      <Memo(FormattedMessage)
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
  >
    <PlusLink
      id="addTagCategoryBtn"
      size={60}
      to="/project/1/tag-templates/create"
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <Memo(FormattedMessage)
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="0"
      >
        <Styled(Link)
          id="tag-category-colors"
          to="/tag-category/1"
        >
          Colors
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <Memo(FormattedMessage)
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="1"
      >
        <Styled(Link)
          id="tag-category-countries"
          to="/tag-category/2"
        >
          Countries
        </Styled(Link)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackLink
        id="backBtn"
        to="/project/1/templates"
      />
      <PlusLink
        hideOnDesktop={true}
        size={60}
        to="/project/1/tag-templates/create"
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;

exports[`TagCategories: Component should render correctly with loader 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": Object {
            "defaultMessage": "Project",
            "id": "shared.components.projectBreadcrumbs.project",
          },
        },
        Object {
          "h3": Object {
            "defaultMessage": "Templates",
            "id": "shared.components.projectBreadcrumbs.templates",
          },
          "path": "/project/1/templates",
          "span": Object {
            "defaultMessage": "Tab",
            "id": "shared.components.projectBreadcrumbs.tab",
          },
        },
        Object {
          "active": true,
          "h3": Object {
            "defaultMessage": "Tags Template",
            "id": "shared.components.projectBreadcrumbs.tagsTemplate",
          },
          "path": "/project/1/tags-templates",
          "span": Object {
            "defaultMessage": "Library",
            "id": "shared.components.projectBreadcrumbs.libraryMessage",
          },
        },
      ]
    }
  />
  <MobileMenu
    headerSubtitle={
      <Memo(FormattedMessage)
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    headerTitle={
      <Memo(FormattedMessage)
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <Memo(FormattedMessage)
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <Memo(FormattedMessage)
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    title={
      <Memo(FormattedMessage)
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
  >
    <PlusLink
      id="addTagCategoryBtn"
      size={60}
      to="/project/1/tag-templates/create"
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <Memo(FormattedMessage)
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="0"
      >
        <Styled(Link)
          id="tag-category-colors"
          to="/tag-category/1"
        >
          Colors
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <Memo(FormattedMessage)
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="1"
      >
        <Styled(Link)
          id="tag-category-countries"
          to="/tag-category/2"
        >
          Countries
        </Styled(Link)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackLink
        id="backBtn"
        to="/project/1/templates"
      />
      <PlusLink
        hideOnDesktop={true}
        size={60}
        to="/project/1/tag-templates/create"
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;
